# oxid_roblox

./: Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs
src/bases/: base_asset.rs  base_group.rs  base_plugin.rs  base_universe.rs  base_user.rs  mod.rs
src/derives/: asset.rs  group.rs  mod.rs  plugin.rs  universe.rs  user.rs
src/models/: asset_resale_data.rs  badge.rs  creator_type.rs  economy_asset.rs  gamepass.rs  group.rs  group_role.rs  group_settings.rs  group_shout.rs  join_request.rs  member.rs  mod.rs  place.rs  plugin.rs  presence.rs  previous_usernames_skinny_user.rs  skinny_group.rs  skinny_universe.rs  skinny_user.rs  social_link.rs  universe.rs  user.rs  wall_post.rs
src/util/: api_helper.rs  errors.rs  mod.rs  paging.rs  parsers.rs  responses.rs  result_extensions.rs
