[package]
name = "oxid_roblox"
version = "0.1.0"
edition = "2021"
authors = ["zmλdie"]
description = "A Roblox web API wrapper written in Rust"
documentation = "https://docs.rs/oxid_roblox"
readme = "README.md"
homepage = "https://github.com/zmadie/oxid_roblox"
repository = "https://github.com/zmadie/oxid_roblox"
license = "MIT"
keywords = ["roblox", "roblox-api", "roblox-web-api"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
chrono = "0.4.31"
async-trait = "0.1.77"
lazy_static = "1.4.0"
serde_repr = "0.1.18"
async-stream = "0.3.5"
futures-core = "0.3.30"
